💫 Removed translations in animation to prevent flickering on chrome

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,11 +19,11 @@ p {
 }
 
 section {
-  @apply flex items-center justify-center w-full h-screen snap-none md:snap-always snap-start px-8;
+  @apply flex items-center justify-center w-full h-screen snap-always snap-start px-8;
 }
 
 .fade-in-up {
-  animation: fade-in 0.9s ease-out;
+  animation: fade-in 0.9s ease;
 }
 
 @keyframes fade-in {
@@ -32,11 +32,9 @@ section {
   }
   20% {
     opacity: 0.1;
-    transform: translateY(10px);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
   }
 }
 
